# Sustainable-Farming-Recommendation-System

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
demo/: app.py
scripts/: quick_demo.py  train.py
src/: __init__.py  data.py  evaluation.py  models.py
tests/: test_farming_system.py
